--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,1 +1,10 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Lacquer&display=swap');
+body{
+    font-family: 'Lacquer', cursive;
+}
+h1{
+    animation-duration: 5s;
+}
+.mb-0{
+    text-decoration: line-through;
+}
